# makefiles-cli

./: .editorconfig  .gitignore  README.md  mkfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
makefiles/: __init__.py  cli_parser.py  exceptions.py  main.py  mkfile.py
makefiles/types/: __init__.py  exit_code.py  natural_number.py  operation_result.py
makefiles/utils/: __init__.py  cli_io.py  copy.py  dirwalker.py  fileutils.py
makefiles/utils/fileutils/: copy_file.py  create_empty_files.py  remove_path.py
makefiles/utils/picker/: fzf.py  manual.py
scripts/: build-zipapp.py  test-matrix.py
src/makefiles/: __main__.py  cli_parser.py  exceptions.py  logger.py  mkfile.py
src/makefiles/types/: exit_code.py
src/makefiles/utils/: cli_io.py
src/makefiles/utils/fileutils/: __init__.py  create_empty_files.py
src/makefiles/utils/picker/: fzf.py  manual.py
tests/: conftest.py  test_cli_parser.py  utils.py
tests/test_cli_parser/: test_get_cli_args.py  test_get_parser.py
tests/test_logger/: test_get_log_dir.py  test_get_logger.py  test_setup_login.py
tests/test_mkfile/: conftest.py  test_create_template.py  test_get_available_templates.py  test_get_template_from_prompt.py  test_get_templates_dir.py  test_main.py  test_runner.py
tests/test_types/: test_exit_code.py  test_natural_number.py  test_operation_result.py
tests/test_utils/: test_copy.py  test_dirwalker.py  test_get_version.py
tests/test_utils/test_cli_io/: test_eprint.py  test_input.py  test_print.py  test_write_to_stream.py
tests/test_utils/test_fileutils/: test_copy.py  test_create_empty_file.py  test_remove_path.py
tests/test_utils/test_pathutils/: test_exists.py  test_get_hinder.py  test_isbrokenlink.py  test_isdir.py  test_isfile.py  test_islink.py  test_islinkd.py  test_islinkf.py
tests/test_utils/test_picker/: test_fzf.py  test_manual.py
tests/utils/: __init__.py  setup_test.py
