[project]
name = "makefiles-cli"
dynamic = ["version"]
description = "A lightweight Python utility for file creation and template generation from XDG_TEMPLATES_DIR"
readme = "README.md"
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
keywords = ["makefiles", "mkfiles", "mkfile", "makefiles-cli", "mkfile-cli"]
dependencies = [
    "typing-extensions>=4.13.2",
]
requires-python = ">=3.10"

[project.scripts]
mkfile = "makefiles.mkfile:main"

[project.urls]
Homepage = "https://github.com/Rid1FZ/makefiles-cli"

[build-system]
requires = ["setuptools>=42", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.3.5",
]

editor = [
    "pyright>=1.1.401",
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.15.20",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
strict = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["makefiles*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
version_file = "src/makefiles/_version.py"

